# 23design-mode

./: README.md  node.txt
mode_1_singleton/: CMakeLists.txt  README.md
mode_1_singleton/src/: CMakeLists.txt  lock.h  main.cpp  singleton.h  stdafx.h
mode_2_strategy/: CMakeLists.txt  README.md
mode_2_strategy/src/: CMakeLists.txt  by_bus.cpp  by_bus.h  context.cpp  context.h  main.cpp  strategy.h  take_a_walk.cpp  take_a_walk.h
mode_3_proxy/src/: main.cpp
mode_4_produce_consumer/: CMakeLists.txt  README.md
mode_4_produce_consumer/src/: CMakeLists.txt  common.h  main.cpp  produce_consumer.cpp  produce_consumer.h  stdafx.h
